--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
   font-family: 'Roboto-Regular';
 }
 
+body {
+  background-color: #65f029;
+  text-align: center
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -32,6 +37,7 @@ ul {
   align-items: center;
   background-color: #DEE2F1;
   padding: 0.5rem;
+  flex-wrap: wrap;
 }
 
 li {
@@ -41,4 +47,106 @@ li {
 .navLink a {
   text-decoration: none;
   color: #191717;
+}
+
+#banner {
+  padding: 1rem;
+  background-color: #191717;
+  color: #DEE2F1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.bannerItem {
+  padding: 0.5rem;
+}
+
+#banerImg {
+  width: 300px;
+}
+
+#suVida {
+  background-color: #DEE2F1;
+  padding: 0.5rem;
+}
+
+#suVida1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 5rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+#img-su-vida {
+  width: 300px;
+  border-radius: 30pt;
+}
+
+#art1 {
+  width: 350px;
+  padding: 3rem;
+  border-left: #F06529 40px solid;
+  padding-left: 2rem;
+  font-size: large;
+}
+
+#suVida2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem;
+}
+
+#art2 {
+  padding: 1rem;
+  width: 600px;
+  text-align: center;
+  font-size: large;
+  padding-right: 4rem;
+  border-right: 40px solid #2955F0;
+}
+
+#tra1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 5rem;
+  color: #DEE2F1;
+  background-color: #F06529;
+}
+
+#tra1 img {
+  width: 200px;
+}
+
+.tra1-item {
+  margin: 10px;
+}
+
+#tra2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #2955F0;
+  flex-wrap: wrap;
+  padding: 5rem;
+  color: #DEE2F1;
+}
+
+#tra2 img {
+  width: 200px;
+}
+
+footer {
+  color: #DEE2F1;
+  background-color: #191717;
+  padding: 1rem;
 }
