--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 
 body {
   background-color: #65f029;
-  text-align: center
 }
 
 header {
@@ -92,7 +91,7 @@ li {
   padding: 3rem;
   border-left: #F06529 40px solid;
   padding-left: 2rem;
-  font-size: large;
+  font-size: 1em;
 }
 
 #suVida2 {
@@ -117,17 +116,17 @@ li {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 5rem;
+  padding: 3rem;
   color: #DEE2F1;
   background-color: #F06529;
 }
 
 #tra1 img {
-  width: 200px;
+  width: 350px;
 }
 
 .tra1-item {
-  margin: 10px;
+  margin-top: 10px;
 }
 
 #tra2 {
@@ -142,11 +141,16 @@ li {
 }
 
 #tra2 img {
-  width: 200px;
+  width: 350px;
+}
+
+#tra2 p {
+  width: 300px;
 }
 
 footer {
   color: #DEE2F1;
   background-color: #191717;
   padding: 1rem;
+  text-align: center;
 }
